# ollama-proxy

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  Dockerfile  Dockerfile.multiarch  GEMINI.md  Makefile  README.md  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  main.py  make.bat  mkdocs.yml  models-filter.txt.example  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: api-reference.md  architecture.md  ci-cd.md  cli-tools.md  configuration.md  contributing.md  deployment.md  index.md  multi-provider.md  requirements.txt  troubleshooting.md  usage-examples.md
docs/css/: custom.css
docs/overrides/: .gitkeep
monitoring/: alertmanager.yml  prometheus.staging.yml  prometheus.yml
monitoring/rules/: ollama-proxy.yml
scripts/: README.md  build-deploy.py  build-deploy.sh  dev-setup.bat  dev-setup.sh  launcher.py  maintenance.bat  maintenance.sh  monitoring-setup.py  security-scan.py  start-server.bat  start-server.ps1  start-server.sh  test-runner.bat  test-runner.sh
site/: 404.html  index.html  sitemap.xml
site/api-reference/: index.html
site/architecture/: index.html
site/configuration/: index.html
site/contributing/: index.html
site/deployment/: index.html
site/search/: search_index.json
site/troubleshooting/: index.html
site/usage-examples/: index.html
src/: api.py  app.py  config.py  exceptions.py  health.py  logging_config.py  main.py  models.py  monitoring.py  multi_provider_api.py  multi_provider_config.py  openrouter.py  utils.py
src/providers/: __init__.py  anthropic_provider.py  aws_bedrock_provider.py  azure_provider.py  base.py  factory.py  google_provider.py  init_providers.py  metrics_collector.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  queue_manager.py  registry.py  retry.py  router.py  transformers.py
tests/: __init__.py  conftest.py  load_test.py  pytest.ini  test_api.py  test_api_comprehensive.py  test_api_integration.py  test_app.py  test_config.py  test_config_advanced.py  test_contract.py  test_e2e.py  test_enhanced_config.py  test_enhanced_routing.py  test_exceptions.py  test_fixed_api.py  test_fixed_openrouter_client.py  test_health_comprehensive.py  test_integration.py  test_logging_config.py  test_main.py  test_main_comprehensive.py  test_models.py  test_monitoring.py  test_multi_provider.py  test_new_providers.py  test_openrouter_client.py  test_openrouter_client_advanced.py  test_performance.py  test_security.py  test_utils.py
